korjattu ad-ongelma material ui -kuvakkeissa + kuvavalinta jatkuu

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <!-- selma icons ENDS -->
 
+  <!-- Material ui -fontti kuvakkeille -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
